# hydrate

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  NOTICE  README.md  hydrate_project.json
asset-engine/: Cargo.toml
asset-engine/src/: error.rs  file_watcher.rs  lib.rs  main.rs
conduit/: Cargo.toml
conduit/src/: dir_watcher.rs  error.rs  lib.rs  main.rs
demo-editor/: Cargo.toml
demo-editor/data/: hydrate_project.json  schema_cache.json  schema_cache_file.json
demo-editor/data/art/: test_material.blender_material
demo-editor/data/assets_path_based/: test.af  test2.af  test_glsl_build_target.af  test_material.blender_material.af  test_transform.af  test_transform2.af  test_transform_ref.af
demo-editor/data/assets_path_based/subdir_a/: test_texture.jpg.af
demo-editor/data/build_data/manifests/: 03d6dee486cea69a.manifest  0a895d720dcd1cdd.manifest  31ba46e55ea2c8e9.manifest  3ac8b8251a72f696.manifest  3b8442b871fbc4d9.manifest  4b7a08fc6f9f769f.manifest  4e7d23e72daf5669.manifest  6de47f2aa6f5803c.manifest  81c8b5d209818bcc.manifest  837e16be645743f7.manifest  8f8e68bd1001ca69.manifest  9158447d2d272d8b.manifest  93775cc3fbab15bb.manifest  (+8 more)
demo-editor/data/schema/: Transform.json  TransformRef.json  Vec.json  blender_material.json  glsl.json  gpu_buffer.json  image.json  mesh_adv.json
demo-editor/src/: inspectors.rs  main.rs
demo-game/: Cargo.toml
demo-game/src/: example_image_asset.rs  main.rs
demo-plugins/: Cargo.toml
demo-plugins/src/: blender_material.rs  blender_mesh.rs  build_jobs.rs  example_tasks.rs  generated.rs  generated_wrapper.rs  glsl.rs  gltf.rs  gpu_buffer.rs  image.rs  lib.rs  mesh_adv.rs  mesh_util.rs  push_buffer.rs  simple_data.rs
demo-plugins/src/job_system/: build_jobs.rs  example_tasks.rs  executor.rs  mod.rs  traits.rs
demo-plugins/src/simple_data_types/: bincode_data_builder.rs  mod.rs  simple_data_trait.rs
demo-types/: Cargo.toml
demo-types/schema/: blender_material.toml  math.toml
demo-types/src/: blender_material.rs  generated.rs  generated_wrapper.rs  glsl.rs  gltf.rs  gpu_buffer.rs  image.rs  lib.rs  mesh_adv.rs  simple_data.rs  simple_data_gen_from_schema.rs
hydrate/: Cargo.toml
hydrate-base/: Cargo.toml
hydrate-base/src/: artifact_id.rs  asset_id.rs  asset_ref.rs  asset_type_id.rs  asset_uuid.rs  b3f.rs  built_artifact_metadata.rs  built_object_metadata.rs  handle.rs  hashing.rs  importer_context.rs  lib.rs  lru_cache.rs  object_id.rs  string_hash.rs  uuid_path.rs
hydrate-codegen/: Cargo.toml
hydrate-codegen/src/: lib.rs  main.rs
hydrate-editor/: Cargo.toml
hydrate-editor/src/: action_queue.rs  app.rs  app_state.rs  db_state.rs  fonts.rs  image_loader.rs  lib.rs  lru_cache.rs  main.rs  persistent_app_state.rs  ui_state.rs
hydrate-editor/src/imgui_support/: imgui_manager.rs  mod.rs  themes.rs
hydrate-editor/src/ui/: asset_browser_grid_drag_drop.rs  drag_drop.rs  draw_ui.rs  menu_bar.rs  mod.rs
hydrate-loader/: Cargo.toml
hydrate-loader/src/: artifact_storage.rs  artifact_type_id.rs  asset_storage.rs  bincode_loader.rs  disk_io.rs  dummy_asset_storage.rs  handle.rs  lib.rs  loader.rs  skeleton.rs  storage.rs
hydrate-loader/src/distill_core/: importer_context.rs  mod.rs
hydrate-loader/src/distill_loader/: handle.rs  mod.rs  storage.rs  task_local.rs
hydrate-model/: Cargo.toml
hydrate-model/examples/: file_system_data_source.rs  processing_example.rs  simple_example.rs
hydrate-model/src/: asset_path.rs  asset_source_id.rs  field_wrappers.rs  json_storage.rs  lib.rs  object_path.rs  tests.rs  uuid_path.rs
hydrate-model/src/data_source/: file_system_id_based.rs  file_system_path_based.rs  mod.rs
hydrate-model/src/data_storage/: json.rs
hydrate-model/src/database/: data_set.rs  data_set_view.rs  diff.rs  mod.rs  property_util_fn.rs  schema_set.rs  single_object.rs  tests.rs  traits.rs  value.rs
hydrate-model/src/editor/: edit_context.rs  editor_model.rs  location_cache.rs  location_tree.rs  mod.rs  path_node.rs  undo.rs
hydrate-model/src/pipeline/: build_jobs.rs  build_types.rs  builder_registry.rs  change_detector.rs  import_jobs.rs  import_thread_pool.rs  import_types.rs  import_util.rs  importer_registry.rs  mod.rs
hydrate-model/src/schema/: enum.rs  interface.rs  map.rs  static_array.rs
hydrate-model/src/schema_cache/: mod.rs
hydrate-model/src/schema_def/: enum_type_builder.rs  json_schema.rs  mod.rs  record_type_builder.rs  schema_def.rs  schema_linker.rs
hydrate-model/src/wrappers/: dynamic_array.rs  mod.rs
hydrate-schema/: Cargo.toml
hydrate-schema/src/: error.rs  lib.rs  property_path.rs  schema_set.rs
hydrate-schema/src/schema/: dynamic_array.rs  enum.rs  fixed.rs  interface.rs  map.rs  mod.rs  record.rs  ref_constraint.rs  static_array.rs
hydrate-schema/src/schema_cache/: mod.rs
hydrate-schema/src/schema_def/: enum_type_builder.rs  fixed_type_builder.rs  json_schema.rs  mod.rs  record_type_builder.rs  schema_def.rs  schema_linker.rs
hydrate/src/: lib.rs
m3/: Cargo.toml
m3/data/: schema_cache_file.json
m3/data/data_source/: data_file.json  data_file.nxt  data_file2.nxt
m3/data/data_source_tree/: data_file.nxt  data_file2.nxt
m3/data/schema/: AllFields.json
m3/data/test_project/: .m3_project
m3/shaders/: compile_shaders.sh
m3/src/: app.rs  app_state.rs  db_state.rs  draw_2_pane_view.rs  draw_3_pane_view.rs  draw_dockspace.rs  draw_ui.rs  draw_ui2.rs  draw_ui_inspector_nexdb.rs  hashing.rs  imgui_support.rs  imgui_themes.rs  lib.rs  main.rs  renderer.rs  test_data.rs  test_data_nexdb.rs  ui_state.rs
m3/src/builders/: image_builder.rs  mod.rs
m3/src/data/: schema_cache_file.json
m3/src/data_source/: mod.rs
m3/src/imgui_support/: imgui_manager.rs  mod.rs  themes.rs
m3/src/importers/: image_importer.rs  material_importer.rs  mod.rs
m3/src/object_db/: mod.rs
m3/src/pipeline/: blender_material.rs  build.rs  change_detector.rs  glsl.rs  image.rs  import.rs  mod.rs  simple_data.rs
m3/src/ui/: asset_browser_grid_drag_drop.rs  draw_ui.rs  menu_bar.rs  mod.rs
pipeline/: Cargo.toml
pipeline/src/: build.rs  import.rs  lib.rs
(+296 files in other folders)
