[workspace]
members = [
    "demo-editor",
    "demo-game",
    "demo-plugins",
    "demo-types",
    "hydrate-schema",
    "hydrate-data",
    "hydrate-base",
    "hydrate-pipeline",
    "hydrate-model",
    "hydrate-editor",
    "hydrate-loader",
    "hydrate-codegen"
    #"distill-core",
    #"distill-loader"
]

exclude = [
    "vendor"
]

resolver = "2"

# Example of overriding a single crate. Doesn't affect dependencies though so it's of limited value
#[profile.dev.package.image]
#opt-level = 2

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

# faster macOS builds
[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
#egui = { path = "vendor/egui/egui" }
#imgui = { git = "https://github.com/aclysma/imgui-rs.git", branch = "custom-imgui-rs" }
#imgui-sys = { git = "https://github.com/aclysma/imgui-rs.git", branch = "custom-imgui-rs" }
#imgui-winit-support = { git = "https://github.com/aclysma/imgui-rs.git", branch = "custom-imgui-rs" }

#imgui = { git = "https://github.com/aclysma/imgui-rs-private.git", branch = "custom-imgui-rs" }
#imgui-sys = { git = "https://github.com/aclysma/imgui-rs-private.git", branch = "custom-imgui-rs" }
#imgui-winit-support = { git = "https://github.com/aclysma/imgui-rs-private.git", branch = "custom-imgui-rs" }
#imnodes = { git = "https://github.com/aclysma/imnodes-rs-private.git", branch = "custom-imnodes" }

imgui = { path = "../imgui-rs/imgui" }
imgui-sys = { path = "../imgui-rs/imgui-sys" }
imgui-winit-support = { path = "../imgui-rs/imgui-winit-support" }
imnodes = { path = "../imnodes-rs" }
imnodes-sys = { path = "../imnodes-rs/imnodes-sys" }
