[workspace]
members = [
    "demo-editor",
    "demo-game",
    "demo-plugins",
    "demo-types",
    "hydrate-schema",
    "hydrate-data",
    "hydrate-base",
    "hydrate-pipeline",
    "hydrate-model",
    "hydrate-editor",
    "hydrate-loader",
    "hydrate-codegen"
    #"distill-core",
    #"distill-loader"
]

exclude = [
    "vendor"
]

resolver = "2"

# Example of overriding a single crate. Doesn't affect dependencies though so it's of limited value
#[profile.dev.package.image]
#opt-level = 2

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

# faster macOS builds
[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
#egui = { path = "vendor/egui/egui" }
#imgui = { git = "https://github.com/aclysma/imgui-rs.git", branch = "custom-imgui-rs" }