[package]
name = "conduit"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
base = { path = "../base" }

notify = "4.0.17"
log = "0.4.14"
path-slash = "0.1.4"
path-clean = "0.1.0"
dunce = "1.0.2"
#futures = "0.3.17"
futures-channel = "0.3.17"

env_logger = "0.9.0"
