[package]
name = "demo-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate = { path = "../hydrate" }
demo-plugins = { path = "../demo-plugins" }

log = "0.4.14"
env_logger = "0.9.0"

profiling = "1.0"

[features]
default = ["profiling/profile-with-tracy"]