[package]
name = "demo-game"
version = "0.0.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate = { path = "../hydrate", version = "0.0.2", features = ["loader"] }
demo-types = { path = "../demo-types" }

crossbeam-channel = "0.5"
log = "0.4.14"
env_logger = "0.9.0"
bincode = "1.3.1"
type-uuid = "0.1.2"

uuid = { version = "0.8.2", features = ["v4", "serde"] }

profiling = "1.0"

[features]
default = ["profiling/profile-with-tracy"]