[package]
name = "demo-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-data = { path = "../hydrate-data" }
hydrate-model = { path = "../hydrate-model" }

demo-types = { path = "../demo-types", features = ["editor-types"] }

log = "0.4.14"
type-uuid = "0.1.2"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
bincode = "1.3.1"

image = "0.23.12"
basis-universal = "0.2.0"
shaderc = "0.8"
gltf = "1.0.0"
uuid = "0.8.2"
glam = { version = "0.13.1", features = [ "serde" ] }
rafx-api = { version = "0.0.14", features = [] }
siphasher = "0.3"
crossbeam-channel = "0.5"
profiling = "1.0"