[package]
name = "demo-plugins"
version = "0.0.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base", version = "0.0.2" }
hydrate-data = { path = "../hydrate-data", version = "0.0.2" }
hydrate-model = { path = "../hydrate-model", version = "0.0.2" }
hydrate-pipeline = { path = "../hydrate-pipeline", version = "0.0.2" }

demo-types = { path = "../demo-types", features = ["editor-types"] }

log = "0.4.14"
type-uuid = "0.1.2"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
bincode = "1.3.1"

image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp"] }
basis-universal = "0.2.0"
shaderc = "0.8"
gltf = "1.0.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
glam = { version = "0.13.1", features = [ "serde" ] }
rafx-api = { version = "0.0.14", features = [] }
siphasher = "0.3"
crossbeam-channel = "0.5"
profiling = "1.0"