[package]
name = "demo-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
hydrate-model = { path = "../hydrate-model" }