[package]
name = "demo-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
editor-types = []

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-data = { path = "../hydrate-data" }

serde = { default-features = false, version = "1.0.145", features = ["derive"] }
type-uuid = "0.1.2"