[package]
name = "demo-types"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# This is a demo crate, we shouldn't publish it
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
editor-types = []

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-data = { path = "../hydrate-data" }

serde = { default-features = false, version = "1.0.145", features = ["derive"] }
type-uuid = "0.1.2"

glam = { version = "0.13.1", features = [ "serde" ] }
rafx-api = { version = "0.0.14", features = ["serde-support"] }
