[package]
name = "hydrate-base"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
uuid = "0.8.2"
crossbeam-channel = "0.5"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
