[package]
name = "hydrate-base"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"

[dependencies]
ahash = "0.7.4"
uuid = "0.8.2"
crossbeam-channel = "0.5"
bincode = "1.3.1"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
const-fnv1a-hash = "1.1.0"

[features]
default = []
# by default off, it's helpful for development but it prevents strings from being stripped from the build
strip-stringhash-strings = []