[package]
name = "hydrate-base"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

[dependencies]
ahash = "0.7.4"
uuid = "0.8.2"
crossbeam-channel = "0.5"
bincode = "1.3.1"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
const-fnv1a-hash = "1.1.0"
backtrace = "0.3.69"

[features]
default = []
# by default off, it's helpful for development but it prevents strings from being stripped from the build
strip-stringhash-strings = []