[package]
name = "hydrate-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-data = { path = "../hydrate-data" }
hydrate-pipeline = { path = "../hydrate-pipeline" }

codegen = "0.2.0"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"