[package]
name = "hydrate-codegen"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-data = { path = "../hydrate-data", version = "0.0.1" }
hydrate-pipeline = { path = "../hydrate-pipeline", version = "0.0.1" }

codegen = "0.2.0"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"