[package]
name = "hydrate-editor"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wgpu also works fine here
# TODO: Replace with rafx
eframe = { version = "0.24.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }

hydrate-base = { path = "../hydrate-base" }
hydrate-model = { path = "../hydrate-model" }
hydrate-pipeline = {path = "../hydrate-pipeline" }
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp"] }

ahash = "0.7.4"
uuid = "0.8.2"
log = "0.4.14"
env_logger = "0.9.0"

egui = "0.24.0"
egui_extras = "0.24.1"
egui_tiles = "0.4.0"
egui_autocomplete = {  version = "3.0.0", features = ["serde"] }

bincode = "1.3.1"
lazy_static = "1"
winit = "0.24"
glam = "0.18.0"
globwalk = "0.8.1"
dunce = "1.0.4"
time = { version = "0.3.30", features = ["formatting"] }

serde = { default-features = false, version = "1.0.145", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
siphasher = "0.3"
type-uuid = "0.1.2"
crossbeam-channel = "0.5"

profiling = "1.0"