[package]
name = "hydrate-loader"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base" }

log = "0.4.14"
crossbeam-channel = "0.5"

futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.2" }
pin-project-lite = "0.2.6"
profiling = "1.0"

type-uuid = "0.1.2"
downcast-rs = "1.2.0"
bincode = "1.3.1"
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
