[package]
name = "hydrate-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-schema = { path = "../hydrate-schema" }
hydrate-data = { path = "../hydrate-data" }

ahash = "0.7.4"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
log = "0.4.14"
slotmap = "1.0.5"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
siphasher = "0.3"
globwalk = "0.8.1"
base64 = "0.20.0"
bincode = "1.3.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5"

# for pipeline
type-uuid = "0.1.2"

profiling = "1.0"

[dev-dependencies]
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
env_logger = "0.9.0"
image = "0.23.12"
