[package]
name = "hydrate-model"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-schema = { path = "../hydrate-schema" }
hydrate-data = { path = "../hydrate-data" }
hydrate-pipeline = { path = "../hydrate-pipeline" }

ahash = "0.7.4"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
log = "0.4.14"
slotmap = "1.0.5"
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
globwalk = "0.8.1"
lazy_static = "1.4.0"
dunce = "1.0.4"
profiling = "1.0"

