[package]
name = "hydrate"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base" }
hydrate-editor = { path = "../hydrate-editor" }
hydrate-model = { path = "../hydrate-model" }
hydrate-loader = { path = "../hydrate-loader" }
hydrate-pipeline = { path = "../hydrate-pipeline" }