[package]
name = "hydrate"
version = "0.0.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2021"
description = "Game asset pipeline and authoring framework"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/hydrate"
homepage = "https://github.com/aclysma/hydrate"
keywords = ["gamedev"]
categories = [
    "game-development",
    "game-engines"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydrate-base = { path = "../hydrate-base", version = "0.0.1", optional = true }
hydrate-schema = { path = "../hydrate-schema", version = "0.0.1", optional = true }
hydrate-data = { path = "../hydrate-data", version = "0.0.1", optional = true }
hydrate-model = { path = "../hydrate-model", version = "0.0.1", optional = true }
hydrate-pipeline = { path = "../hydrate-pipeline", version = "0.0.1", optional = true }

hydrate-editor = { path = "../hydrate-editor", version = "0.0.1", optional = true }
hydrate-loader = { path = "../hydrate-loader", version = "0.0.1", optional = true }
hydrate-codegen = { path = "../hydrate-codegen", version = "0.0.1", optional = true }

[features]
loader = ["hydrate-base", "hydrate-loader"]
pipeline = ["hydrate-base", "hydrate-schema", "hydrate-data", "hydrate-model", "hydrate-pipeline"]
editor = ["hydrate-base", "hydrate-schema", "hydrate-data", "hydrate-model", "hydrate-pipeline", "hydrate-editor"]
codegen = ["hydrate-base", "hydrate-schema", "hydrate-data", "hydrate-model", "hydrate-pipeline", "hydrate-codegen"]