[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexdb = { path = "../nexdb" }
uuid = "0.8.2"
type-uuid = "0.1.2"
log = "0.4.14"
globwalk = "0.8.1"
siphasher = "0.3"

serde = { default-features = false, version = "1.0.145", features = ["derive"] }